--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "dev": "NODE_ENV=development nodemon backend/server.js",
-  "start": "NODE_ENV=production node backend/server.js",
-  "build": "cd frontend && npm install && npm run build"
-  },
+		"dev": "NODE_ENV=development nodemon backend/server.js",
+		"start": "NODE_ENV=production node backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+	},
   "author": "",
 	"type": "module",
   "license": "ISC",
