--- a/backend/package.json
+++ b/backend/package.json
@@ -4,12 +4,12 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "dev": "NODE_ENV=development nodemon backend/server.js",
-  "start": "NODE_ENV=production node backend/server.js",
-  "build": "cd frontend && npm install && npm run build"
+    "dev": "nodemon backend/server.js",
+    "start": " node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
   },
   "author": "",
-	"type": "module",
+  "type": "module",
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -20,7 +20,8 @@
     "express": "^4.21.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.9.0",
-    "mongoose": "^8.7.0"
+    "mongoose": "^8.7.0",
+    "vercel": "^37.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
