--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "twitter-clone",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
  "scripts": {
 		"dev":  "nodemon backend/server.js",
 		"start": " node backend/server.js",
