--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,12 @@
 {
   "name": "twitter-clone",
   "version": "1.0.0",
-  "description": "",
   "main": "server.js",
- "scripts": {
-  "dev": "nodemon backend/server.js",
-  "start": "node backend/server.js",
-  "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-},
-
+  "scripts": {
+    "dev": "nodemon backend/server.js",
+    "start": "node backend/server.js",
+    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+  },
   "author": "",
   "type": "module",
   "license": "ISC",
@@ -26,5 +24,9 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.7"
-  }
+  },
+  "directories": {
+    "lib": "lib"
+  },
+  "description": ""
 }
