--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "twitter-clone",
   "version": "1.0.0",
   "main": "server.js",
-  "scripts": {
-    "dev": "nodemon backend/server.js",
-    "start": "node backend/server.js",
-    "build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
-  },
+"scripts": {
+		"dev": "NODE_ENV=development nodemon backend/server.js",
+		"start": "NODE_ENV=production node backend/server.js",
+		"build": "npm install && npm install --prefix frontend && npm run build --prefix frontend"
+	},
   "author": "",
   "type": "module",
   "license": "ISC",
